<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RelativeLayout
                android:id="@+id/rlHeader"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/doctor_image7" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="220dp"
                android:layout_height="430dp"
                android:background="@drawable/shape_left_panel"
                app:layout_constraintBottom_toBottomOf="@+id/login_containerLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rlHeader"
                app:layout_constraintVertical_bias="0.10" />

            <LinearLayout
                android:id="@+id/login_containerLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/shadow_login_panel"
                android:orientation="vertical"
                android:paddingLeft="50dp"
                android:paddingTop="70dp"
                android:paddingRight="50dp"
                android:paddingBottom="60dp"
                app:layout_constraintTop_toBottomOf="@+id/rlHeader">


                <EditText
                    android:id="@+id/login_user_email"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/inputs_height"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/layout_shape2"
                    android:drawableLeft="@drawable/ic_email2"
                    android:fontFamily="@font/font5"
                    android:textStyle="normal"
                    android:drawableTint="@color/sky"
                    android:hint="@string/Email"
                    android:gravity="right"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/sky"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/login_user_password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/inputs_height"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/layout_shape2"
                    android:drawableLeft="@drawable/ic_password2"
                    android:fontFamily="@font/font5"
                    android:gravity="right"
                    android:drawableTint="@color/sky"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColorHint="@color/sky"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/forget_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/font3"
                    android:onClick="forgetPassword"
                    android:padding="10dp"
                    android:gravity="left"
                    android:text="@string/forget_your_password"
                    android:textAlignment="textEnd"
                    android:textColor="@color/grey"
                    android:textSize="13dp" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/inputs_height"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="50dp"
                    android:background="@drawable/button_background"
                    android:fontFamily="@font/font5"
                    android:padding="4dp"
                    android:text="@string/Login"
                    android:textAllCaps="true"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp"
                    android:textStyle="normal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:gravity="center_horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font3"
                    android:onClick="move_to_signUp"
                    android:padding="10dp"
                    android:text="@string/Dont_have_account"
                    android:textColor="@color/grey"
                    android:textSize="20dp"/>



            </LinearLayout>



        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>