<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    android:orientation="vertical"
    tools:context=".Forget_Password">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="left"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="4dp"
                    android:background="@drawable/toolbar_shape"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toTopOf="@+id/editTextTextMultiLine"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0">


                    <ImageButton
                        android:id="@+id/back_arrow"
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left|center"
                        android:foregroundGravity="left|center"
                        android:background="@drawable/shape1"
                        android:onClick="back"
                        android:src="@drawable/back" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="right"
                        android:fontFamily="@font/font5"
                        android:gravity="center"
                        android:text="@string/forget_your_password"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>


                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/lottie"
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:foregroundGravity="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.58"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/appName"
                    app:layout_constraintVertical_bias="0.435"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/forget_password" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                >

                <androidx.cardview.widget.CardView
                    android:id="@+id/optRoundCardView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                    android:background="@drawable/border_shape"
                    app:cardCornerRadius="8dp"
                 >


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/font5"
                        android:padding="20dp"
                        android:text="@string/fill_your_data_to_recover_password"
                        android:textAlignment="center"
                        android:textColor="#151515"
                        android:textSize="16sp"
                        android:textStyle="normal" />


                    <androidx.core.widget.NestedScrollView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fillViewport="true">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="50dp"
                            android:orientation="vertical">


                            <View
                                android:id="@+id/divider4"
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:layout_margin="8dp"
                                android:background="#fff" />

                            <androidx.cardview.widget.CardView
                                android:id="@+id/card_container"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="8dp"
                                android:layout_marginTop="16dp"
                                android:layout_marginRight="8dp"
                                android:padding="14dp"
                                app:cardCornerRadius="10dp"
                                app:cardElevation="10dp">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:background="@color/sky"
                                    android:orientation="vertical"
                                    android:padding="10dp">


                                    <EditText
                                        android:id="@+id/forgetPass_userEmail"
                                        android:layout_width="match_parent"
                                        android:layout_height="@dimen/inputs_height"
                                        android:layout_marginLeft="4dp"
                                        android:layout_marginTop="16dp"
                                        android:layout_marginRight="4dp"
                                        android:background="@drawable/layout_shape2"
                                        android:drawableLeft="@drawable/ic_email2"
                                        android:fontFamily="@font/font5"
                                        android:drawableTint="@color/sky"
                                        android:hint="@string/Email"
                                        android:gravity="right"
                                        android:inputType="textEmailAddress"
                                        android:padding="10dp"
                                        android:textColorHint="@color/sky"
                                        android:textSize="14sp" />

                                    <EditText
                                        android:id="@+id/forgetPass_userNumber"
                                        android:layout_width="match_parent"
                                        android:layout_height="@dimen/inputs_height"
                                        android:layout_marginLeft="4dp"
                                        android:layout_marginTop="16dp"
                                        android:layout_marginRight="4dp"
                                        android:layout_marginBottom="12dp"
                                        android:background="@drawable/layout_shape2"
                                        android:drawableLeft="@drawable/ic_call2"
                                        android:drawableTint="@color/sky"
                                        android:fontFamily="@font/font5"
                                        android:hint="@string/phone_number"
                                        android:inputType="numberDecimal"
                                        android:padding="10dp"
                                        android:gravity="right"
                                        android:textColorHint="@color/sky"
                                        android:textSize="14sp" />

                                </LinearLayout>


                            </androidx.cardview.widget.CardView>


                            <Button
                                android:id="@+id/get_password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="50dp"
                                android:layout_marginTop="60dp"
                                android:layout_marginEnd="50dp"
                                android:background="@drawable/button_background"
                                android:fontFamily="@font/font5"
                                android:text="@string/get_password"
                                android:textAllCaps="false"
                                android:textColor="@color/white"
                                android:textSize="16sp"
                                android:textStyle="normal" />


                        </LinearLayout>

                    </androidx.core.widget.NestedScrollView>


                </androidx.cardview.widget.CardView>>
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>